src/objects/Payment_Voucher__c.object
<CustomObject>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Being__c</fullName>
        <label>Being</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IFSC_code__c</fullName>
        <label>IFSC code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <label>Payee</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                    <default>true</default>
                    <label>Cash</label>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>The_Sum_of__c</fullName>
        <label>The Sum of</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Payment Voucher</label>
    <nameField>
        <displayFormat>PV-{0000}</displayFormat>
        <label>Payment Voucher ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Vouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>